<resources>
    <string name="app_name">Chat</string>
    <string name="name">Name</string>
    <string name="Account">Enter your account</string>
    <string name="Homepage">Welcome to Home Page</string>
    <string name="username">Enter user name</string>
    <string name="password">Enter your passowrd</string>
    <string name="confirm">Enter to confirm password</string>
    <string name="login">Login your account</string>
    <string name="creat">Creat</string>
    <string name="haveacount">I already have an account</string>
    <string name="LoginB">Sign in</string>
    <string name="Creatacount">CreatAcount</string>
    <string name="Contactus">Contact Us</string>
    <string name="Contact">Contact</string>
    <string name="Loginpage">loginpage</string>
    <string name="Home">Home</string>
    <string name="Choice1">choice1</string>
    <string name="Choice2">choice2</string>
    <string name="open">open drawer</string>
    <string name="close">close drawer</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
</resources>